# Gmail-Automation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt
src/ai_latest_development/: crew.py  main.py
src/ai_latest_development/gmail_automation/: email_agents.py  gmail_client.py
